2010-10-04  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWBSettings.cpp (setCustomTemplatesEnabled): fixed #1791 "Add
	preference flag to enable / disable the Custom templates button on
	the New Firewall Wizard". Use of the custom template library
	to create new firewall object is now optional, controlled by
	a checkbox in the "Object" tab of the gobal preferenes dialog.
	New users will have this option turned off by default, however
	existing users will see it enabled for backwards compatibility.

	* FindObjectWidget.cpp (showObject): fixed #1790 "When an object
	is found using Find and the object is in the object tree, the
	keyboard focus shifts to the Object Panel". The "find" pabel now
	retains keyboard focus after it shows found object in the tree,
	this allows the user to just hit Enter on the keyboard to find
	the next object.

	* FindObjectWidget.cpp (objectDeleted): fixed #1785 "Deleting
	graphic icon of object from Find tab should also remove the text
	name or label"

	* newFirewallDialog.cpp (changed): fixed #1770 Eliminated pause
	that happened when user switched from page 0 to page 1 of the new
	firewall wizard. Pause was caused by the DNS queries the program
	ran trying to determine ip address of the firewall using the name
	provided on the first page of the wizard. Now DNS query is
	launched only if user wants to create interfaces uses snmp scan.

	* InterfaceEditorWidget.cpp (InterfaceEditorWidget): fixed #1772
	improved design of the widget used to edit ip addresses and other
	attributes of an interface in the new firewall, new host and new
	cluster wizards. Removed "MAC Address" imput field and rearranged
	other input fields according to the result of usability tests.

	* SSHCisco.cpp (SSHCisco): fixed #1784 added Cisco ASA (PIX) error
	message "cannot add route entry" to the list of errors that
	built-in installer recognizes and marks install process as
	"Failure".

	* newFirewallDialog.cpp (showPage): fixed #1767 improved UI in the