@@ -363,6 +363,15 @@
     </p>
   </li>
 
+  <li>
+    <p>
+      fixed #1777 "scroll new fw object to the top of the tree view
+      panel once its created". This has side effect in that some
+      other operations that open an object in the tree will also
+      scroll the tree to position this object at the top.
+    </p>
+  </li>
+
 </ul>
 
 
